// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"filename" option matches snapshot for \`[name][ext].super-compressed.gz[query]\` value ({String}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.super-compressed.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.super-compressed.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.super-compressed.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.super-compressed.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "async.async.js?ver=8b644dc8a959875e39cf",
    193,
    Object {
      "fullhash": "8b644dc8a959875e39cf",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.super-compressed.js.gz?ver=8b644dc8a959875e39cf",
      },
      "size": 193,
    },
  ],
  Array [
    "async.async.super-compressed.js.gz?ver=8b644dc8a959875e39cf",
    133,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 133,
    },
  ],
  Array [
    "main.js?var=8b644dc8a959875e39cf",
    15988,
    Object {
      "fullhash": "8b644dc8a959875e39cf",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.super-compressed.js.gz?var=8b644dc8a959875e39cf",
      },
      "size": 15988,
    },
  ],
  Array [
    "main.super-compressed.js.gz?var=8b644dc8a959875e39cf",
    3984,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3984,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for \`[name][ext].super-compressed.gz[query]\` value ({String}): errors 1`] = `Array []`;

exports[`"filename" option matches snapshot for \`[name][ext].super-compressed.gz[query]\` value ({String}): warnings 1`] = `Array []`;

exports[`"filename" option matches snapshot for \`[path][base].super-compressed.gz[query][fragment]\` value ({String}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.super-compressed.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.super-compressed.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.super-compressed.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.super-compressed.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "assets/js/async.async.js.super-compressed.gz?ver=e78ff13f70b0573e4bc2#hash",
    133,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 133,
    },
  ],
  Array [
    "assets/js/async.async.js?ver=e78ff13f70b0573e4bc2#hash",
    193,
    Object {
      "fullhash": "e78ff13f70b0573e4bc2",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "assets/js/async.async.js.super-compressed.gz?ver=e78ff13f70b0573e4bc2#hash",
      },
      "size": 193,
    },
  ],
  Array [
    "assets/js/main.js.super-compressed.gz?var=e78ff13f70b0573e4bc2#hash",
    4000,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4000,
    },
  ],
  Array [
    "assets/js/main.js?var=e78ff13f70b0573e4bc2#hash",
    16014,
    Object {
      "fullhash": "e78ff13f70b0573e4bc2",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "assets/js/main.js.super-compressed.gz?var=e78ff13f70b0573e4bc2#hash",
      },
      "size": 16014,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for \`[path][base].super-compressed.gz[query][fragment]\` value ({String}): errors 1`] = `Array []`;

exports[`"filename" option matches snapshot for \`[path][base].super-compressed.gz[query][fragment]\` value ({String}): warnings 1`] = `Array []`;

exports[`"filename" option matches snapshot for custom function ({Function}): assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "async.async.js.gz?ver=7b8cd83eb7d4bc9a3a10",
    133,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 133,
    },
  ],
  Array [
    "async.async.js?ver=7b8cd83eb7d4bc9a3a10#hash",
    193,
    Object {
      "fullhash": "7b8cd83eb7d4bc9a3a10",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "async.async.js.gz?ver=7b8cd83eb7d4bc9a3a10",
      },
      "size": 193,
    },
  ],
  Array [
    "main.js.gz?var=7b8cd83eb7d4bc9a3a10",
    3987,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 3987,
    },
  ],
  Array [
    "main.js?var=7b8cd83eb7d4bc9a3a10#hash",
    15993,
    Object {
      "fullhash": "7b8cd83eb7d4bc9a3a10",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "main.js.gz?var=7b8cd83eb7d4bc9a3a10",
      },
      "size": 15993,
    },
  ],
]
`;

exports[`"filename" option matches snapshot for custom function ({Function}): errors 1`] = `Array []`;

exports[`"filename" option matches snapshot for custom function ({Function}): warnings 1`] = `Array []`;

exports[`"filename" option show work: assets 1`] = `
Array [
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png",
    78117,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "09a1a1112c577c2794359715edfcb5ac.png.gz",
      },
      "size": 78117,
      "sourceFilename": "icon.png",
    },
  ],
  Array [
    "09a1a1112c577c2794359715edfcb5ac.png.gz",
    73160,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 73160,
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg",
    672,
    Object {
      "immutable": true,
      "related": Object {
        "gzipped": "23fc1d3ac606d117e05a140e0de79806.svg.gz",
      },
      "size": 672,
      "sourceFilename": "icon.svg",
    },
  ],
  Array [
    "23fc1d3ac606d117e05a140e0de79806.svg.gz",
    393,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 393,
    },
  ],
  Array [
    "assets/scripts/async.async.js.gz",
    133,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 133,
    },
  ],
  Array [
    "assets/scripts/async.async.js?ver=d48ab8c40534a6b8ab14#hash",
    193,
    Object {
      "fullhash": "d48ab8c40534a6b8ab14",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "assets/scripts/async.async.js.gz",
      },
      "size": 193,
    },
  ],
  Array [
    "assets/scripts/main.js.gz",
    4000,
    Object {
      "compressed": true,
      "immutable": true,
      "size": 4000,
    },
  ],
  Array [
    "assets/scripts/main.js?var=d48ab8c40534a6b8ab14#hash",
    16019,
    Object {
      "fullhash": "d48ab8c40534a6b8ab14",
      "immutable": true,
      "javascriptModule": false,
      "related": Object {
        "gzipped": "assets/scripts/main.js.gz",
      },
      "size": 16019,
    },
  ],
]
`;

exports[`"filename" option show work: errors 1`] = `Array []`;

exports[`"filename" option show work: warnings 1`] = `Array []`;
